[gd_scene load_steps=9 format=3 uid="uid://djxcdkbpr7s7b"]

[ext_resource type="Script" uid="uid://13xnsbf10wp1" path="res://Scripts/Card.gd" id="1_xdg4e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mmmh4"]
size = Vector2(240, 400)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dubh5"]
bg_color = Color(0.96, 0.448, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mmmh4"]
bg_color = Color(0, 0.529388, 0.125226, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xdg4e"]
bg_color = Color(0, 0, 0, 0.266667)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eewr4"]
bg_color = Color(0, 0, 0, 0.266667)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 19

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ys80y"]
bg_color = Color(0, 0, 0, 0.258824)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t5ksk"]
bg_color = Color(0.533333, 0.533333, 0.533333, 0.533333)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 119
corner_radius_top_right = 119
corner_radius_bottom_right = 119
corner_radius_bottom_left = 119
corner_detail = 20

[node name="Card" type="Node2D"]
script = ExtResource("1_xdg4e")

[node name="Collider" type="Area2D" parent="."]

[node name="Rectangle" type="CollisionShape2D" parent="Collider"]
shape = SubResource("RectangleShape2D_mmmh4")

[node name="Display" type="Node2D" parent="."]

[node name="Border" type="Label" parent="Display"]
visible = false
offset_left = -123.0
offset_top = -203.0
offset_right = 123.0
offset_bottom = 203.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_dubh5")
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Background" type="Label" parent="Display"]
offset_left = -120.0
offset_top = -200.0
offset_right = 120.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_mmmh4")
text = "
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Name" type="Label" parent="Display"]
offset_left = -120.0
offset_top = -200.0
offset_right = 120.0
offset_bottom = -160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_xdg4e")
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="Cost" type="Label" parent="Display"]
offset_left = -120.0
offset_top = -200.0
offset_right = -80.0
offset_bottom = -160.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_eewr4")
text = "9"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="Display"]
offset_left = -120.0
offset_top = 80.0
offset_right = 120.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_ys80y")
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Art" type="Label" parent="Display"]
offset_left = -120.0
offset_top = -160.0
offset_right = 120.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("StyleBoxFlat_t5ksk")
text = "Art"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
metadata/_edit_use_anchors_ = true

[connection signal="input_event" from="Collider" to="." method="_on_collider_input_event"]
[connection signal="mouse_entered" from="Collider" to="." method="_on_collider_mouse_entered"]
[connection signal="mouse_exited" from="Collider" to="." method="_on_collider_mouse_exited"]
